--- a/src/spritesmith-generated/sprite.scss
+++ b/src/spritesmith-generated/sprite.scss
@@ -18,8 +18,8 @@ $next-width: 46px;
 $next-height: 44px;
 $next-total-width: 540px;
 $next-total-height: 1922px;
-$next-image: '~sprite.png';
-$next: (0px, 0px, 0px, 0px, 46px, 44px, 540px, 1922px, '~sprite.png', 'next', );
+$next-image: '../spritesmith-generated/sprite.png';
+$next: (0px, 0px, 0px, 0px, 46px, 44px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'next', );
 $chicken-name: 'chicken';
 $chicken-x: 0px;
 $chicken-y: 44px;
@@ -29,8 +29,8 @@ $chicken-width: 285px;
 $chicken-height: 123px;
 $chicken-total-width: 540px;
 $chicken-total-height: 1922px;
-$chicken-image: '~sprite.png';
-$chicken: (0px, 44px, 0px, -44px, 285px, 123px, 540px, 1922px, '~sprite.png', 'chicken', );
+$chicken-image: '../spritesmith-generated/sprite.png';
+$chicken: (0px, 44px, 0px, -44px, 285px, 123px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'chicken', );
 $boy-name: 'boy';
 $boy-x: 0px;
 $boy-y: 167px;
@@ -40,8 +40,8 @@ $boy-width: 155px;
 $boy-height: 183px;
 $boy-total-width: 540px;
 $boy-total-height: 1922px;
-$boy-image: '~sprite.png';
-$boy: (0px, 167px, 0px, -167px, 155px, 183px, 540px, 1922px, '~sprite.png', 'boy', );
+$boy-image: '../spritesmith-generated/sprite.png';
+$boy: (0px, 167px, 0px, -167px, 155px, 183px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'boy', );
 $medal-name: 'medal';
 $medal-x: 0px;
 $medal-y: 350px;
@@ -51,8 +51,8 @@ $medal-width: 150px;
 $medal-height: 186px;
 $medal-total-width: 540px;
 $medal-total-height: 1922px;
-$medal-image: '~sprite.png';
-$medal: (0px, 350px, 0px, -350px, 150px, 186px, 540px, 1922px, '~sprite.png', 'medal', );
+$medal-image: '../spritesmith-generated/sprite.png';
+$medal: (0px, 350px, 0px, -350px, 150px, 186px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'medal', );
 $milk-name: 'milk';
 $milk-x: 0px;
 $milk-y: 536px;
@@ -62,8 +62,8 @@ $milk-width: 193px;
 $milk-height: 196px;
 $milk-total-width: 540px;
 $milk-total-height: 1922px;
-$milk-image: '~sprite.png';
-$milk: (0px, 536px, 0px, -536px, 193px, 196px, 540px, 1922px, '~sprite.png', 'milk', );
+$milk-image: '../spritesmith-generated/sprite.png';
+$milk: (0px, 536px, 0px, -536px, 193px, 196px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'milk', );
 $fries-name: 'fries';
 $fries-x: 0px;
 $fries-y: 732px;
@@ -73,8 +73,8 @@ $fries-width: 197px;
 $fries-height: 204px;
 $fries-total-width: 540px;
 $fries-total-height: 1922px;
-$fries-image: '~sprite.png';
-$fries: (0px, 732px, 0px, -732px, 197px, 204px, 540px, 1922px, '~sprite.png', 'fries', );
+$fries-image: '../spritesmith-generated/sprite.png';
+$fries: (0px, 732px, 0px, -732px, 197px, 204px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'fries', );
 $purse-name: 'purse';
 $purse-x: 0px;
 $purse-y: 936px;
@@ -84,8 +84,8 @@ $purse-width: 210px;
 $purse-height: 220px;
 $purse-total-width: 540px;
 $purse-total-height: 1922px;
-$purse-image: '~sprite.png';
-$purse: (0px, 936px, 0px, -936px, 210px, 220px, 540px, 1922px, '~sprite.png', 'purse', );
+$purse-image: '../spritesmith-generated/sprite.png';
+$purse: (0px, 936px, 0px, -936px, 210px, 220px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'purse', );
 $background-name: 'background';
 $background-x: 0px;
 $background-y: 1156px;
@@ -95,13 +95,13 @@ $background-width: 540px;
 $background-height: 766px;
 $background-total-width: 540px;
 $background-total-height: 1922px;
-$background-image: '~sprite.png';
-$background: (0px, 1156px, 0px, -1156px, 540px, 766px, 540px, 1922px, '~sprite.png', 'background', );
+$background-image: '../spritesmith-generated/sprite.png';
+$background: (0px, 1156px, 0px, -1156px, 540px, 766px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'background', );
 $spritesheet-width: 540px;
 $spritesheet-height: 1922px;
-$spritesheet-image: '~sprite.png';
+$spritesheet-image: '../spritesmith-generated/sprite.png';
 $spritesheet-sprites: ($next, $chicken, $boy, $medal, $milk, $fries, $purse, $background, );
-$spritesheet: (540px, 1922px, '~sprite.png', $spritesheet-sprites, );
+$spritesheet: (540px, 1922px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
