--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,13 @@
-<div id="index">
-	
-</div>
-<script src="http://localhost:3000/dist/index.js"></script>
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <title>consume</title>
+</head>
+
+<body>
+    <div id="index"></div>
+    <script src="http://localhost:3000/dist/index.js"></script>
+</body>
+
+</html>
