--- a/src/spritesmith-generated/sprite.scss
+++ b/src/spritesmith-generated/sprite.scss
@@ -15,93 +15,93 @@ $next-y: 0px;
 $next-offset-x: 0px;
 $next-offset-y: 0px;
 $next-width: 46px;
-$next-height: 44px;
+$next-height: 60px;
 $next-total-width: 540px;
-$next-total-height: 1922px;
+$next-total-height: 2090px;
 $next-image: '../spritesmith-generated/sprite.png';
-$next: (0px, 0px, 0px, 0px, 46px, 44px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'next', );
+$next: (0px, 0px, 0px, 0px, 46px, 60px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'next', );
 $chicken-name: 'chicken';
 $chicken-x: 0px;
-$chicken-y: 44px;
+$chicken-y: 60px;
 $chicken-offset-x: 0px;
-$chicken-offset-y: -44px;
+$chicken-offset-y: -60px;
 $chicken-width: 285px;
-$chicken-height: 123px;
+$chicken-height: 140px;
 $chicken-total-width: 540px;
-$chicken-total-height: 1922px;
+$chicken-total-height: 2090px;
 $chicken-image: '../spritesmith-generated/sprite.png';
-$chicken: (0px, 44px, 0px, -44px, 285px, 123px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'chicken', );
+$chicken: (0px, 60px, 0px, -60px, 285px, 140px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'chicken', );
 $boy-name: 'boy';
 $boy-x: 0px;
-$boy-y: 167px;
+$boy-y: 200px;
 $boy-offset-x: 0px;
-$boy-offset-y: -167px;
+$boy-offset-y: -200px;
 $boy-width: 155px;
-$boy-height: 183px;
+$boy-height: 200px;
 $boy-total-width: 540px;
-$boy-total-height: 1922px;
+$boy-total-height: 2090px;
 $boy-image: '../spritesmith-generated/sprite.png';
-$boy: (0px, 167px, 0px, -167px, 155px, 183px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'boy', );
+$boy: (0px, 200px, 0px, -200px, 155px, 200px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'boy', );
 $medal-name: 'medal';
 $medal-x: 0px;
-$medal-y: 350px;
+$medal-y: 400px;
 $medal-offset-x: 0px;
-$medal-offset-y: -350px;
+$medal-offset-y: -400px;
 $medal-width: 150px;
-$medal-height: 186px;
+$medal-height: 200px;
 $medal-total-width: 540px;
-$medal-total-height: 1922px;
+$medal-total-height: 2090px;
 $medal-image: '../spritesmith-generated/sprite.png';
-$medal: (0px, 350px, 0px, -350px, 150px, 186px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'medal', );
-$milk-name: 'milk';
-$milk-x: 0px;
-$milk-y: 536px;
-$milk-offset-x: 0px;
-$milk-offset-y: -536px;
-$milk-width: 193px;
-$milk-height: 196px;
-$milk-total-width: 540px;
-$milk-total-height: 1922px;
-$milk-image: '../spritesmith-generated/sprite.png';
-$milk: (0px, 536px, 0px, -536px, 193px, 196px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'milk', );
+$medal: (0px, 400px, 0px, -400px, 150px, 200px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'medal', );
 $fries-name: 'fries';
 $fries-x: 0px;
-$fries-y: 732px;
+$fries-y: 600px;
 $fries-offset-x: 0px;
-$fries-offset-y: -732px;
+$fries-offset-y: -600px;
 $fries-width: 197px;
-$fries-height: 204px;
+$fries-height: 220px;
 $fries-total-width: 540px;
-$fries-total-height: 1922px;
+$fries-total-height: 2090px;
 $fries-image: '../spritesmith-generated/sprite.png';
-$fries: (0px, 732px, 0px, -732px, 197px, 204px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'fries', );
+$fries: (0px, 600px, 0px, -600px, 197px, 220px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'fries', );
+$milk-name: 'milk';
+$milk-x: 0px;
+$milk-y: 820px;
+$milk-offset-x: 0px;
+$milk-offset-y: -820px;
+$milk-width: 193px;
+$milk-height: 220px;
+$milk-total-width: 540px;
+$milk-total-height: 2090px;
+$milk-image: '../spritesmith-generated/sprite.png';
+$milk: (0px, 820px, 0px, -820px, 193px, 220px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'milk', );
 $purse-name: 'purse';
 $purse-x: 0px;
-$purse-y: 936px;
+$purse-y: 1040px;
 $purse-offset-x: 0px;
-$purse-offset-y: -936px;
+$purse-offset-y: -1040px;
 $purse-width: 210px;
-$purse-height: 220px;
+$purse-height: 250px;
 $purse-total-width: 540px;
-$purse-total-height: 1922px;
+$purse-total-height: 2090px;
 $purse-image: '../spritesmith-generated/sprite.png';
-$purse: (0px, 936px, 0px, -936px, 210px, 220px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'purse', );
+$purse: (0px, 1040px, 0px, -1040px, 210px, 250px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'purse', );
 $background-name: 'background';
 $background-x: 0px;
-$background-y: 1156px;
+$background-y: 1290px;
 $background-offset-x: 0px;
-$background-offset-y: -1156px;
+$background-offset-y: -1290px;
 $background-width: 540px;
-$background-height: 766px;
+$background-height: 800px;
 $background-total-width: 540px;
-$background-total-height: 1922px;
+$background-total-height: 2090px;
 $background-image: '../spritesmith-generated/sprite.png';
-$background: (0px, 1156px, 0px, -1156px, 540px, 766px, 540px, 1922px, '../spritesmith-generated/sprite.png', 'background', );
+$background: (0px, 1290px, 0px, -1290px, 540px, 800px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'background', );
 $spritesheet-width: 540px;
-$spritesheet-height: 1922px;
+$spritesheet-height: 2090px;
 $spritesheet-image: '../spritesmith-generated/sprite.png';
-$spritesheet-sprites: ($next, $chicken, $boy, $medal, $milk, $fries, $purse, $background, );
-$spritesheet: (540px, 1922px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($next, $chicken, $boy, $medal, $fries, $milk, $purse, $background, );
+$spritesheet: (540px, 2090px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
