--- a/src/spritesmith-generated/sprite.scss
+++ b/src/spritesmith-generated/sprite.scss
@@ -16,92 +16,136 @@ $next-offset-x: 0px;
 $next-offset-y: 0px;
 $next-width: 46px;
 $next-height: 60px;
-$next-total-width: 540px;
-$next-total-height: 2090px;
+$next-total-width: 564px;
+$next-total-height: 2550px;
 $next-image: '../spritesmith-generated/sprite.png';
-$next: (0px, 0px, 0px, 0px, 46px, 60px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'next', );
+$next: (0px, 0px, 0px, 0px, 46px, 60px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'next', );
+$come-name: 'come';
+$come-x: 0px;
+$come-y: 60px;
+$come-offset-x: 0px;
+$come-offset-y: -60px;
+$come-width: 163px;
+$come-height: 80px;
+$come-total-width: 564px;
+$come-total-height: 2550px;
+$come-image: '../spritesmith-generated/sprite.png';
+$come: (0px, 60px, 0px, -60px, 163px, 80px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'come', );
+$enter-name: 'enter';
+$enter-x: 0px;
+$enter-y: 140px;
+$enter-offset-x: 0px;
+$enter-offset-y: -140px;
+$enter-width: 237px;
+$enter-height: 100px;
+$enter-total-width: 564px;
+$enter-total-height: 2550px;
+$enter-image: '../spritesmith-generated/sprite.png';
+$enter: (0px, 140px, 0px, -140px, 237px, 100px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'enter', );
+$share-buton-name: 'shareButon';
+$share-buton-x: 0px;
+$share-buton-y: 240px;
+$share-buton-offset-x: 0px;
+$share-buton-offset-y: -240px;
+$share-buton-width: 237px;
+$share-buton-height: 100px;
+$share-buton-total-width: 564px;
+$share-buton-total-height: 2550px;
+$share-buton-image: '../spritesmith-generated/sprite.png';
+$share-buton: (0px, 240px, 0px, -240px, 237px, 100px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'shareButon', );
+$title-name: 'title';
+$title-x: 0px;
+$title-y: 340px;
+$title-offset-x: 0px;
+$title-offset-y: -340px;
+$title-width: 564px;
+$title-height: 130px;
+$title-total-width: 564px;
+$title-total-height: 2550px;
+$title-image: '../spritesmith-generated/sprite.png';
+$title: (0px, 340px, 0px, -340px, 564px, 130px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'title', );
 $chicken-name: 'chicken';
 $chicken-x: 0px;
-$chicken-y: 60px;
+$chicken-y: 470px;
 $chicken-offset-x: 0px;
-$chicken-offset-y: -60px;
+$chicken-offset-y: -470px;
 $chicken-width: 285px;
 $chicken-height: 140px;
-$chicken-total-width: 540px;
-$chicken-total-height: 2090px;
+$chicken-total-width: 564px;
+$chicken-total-height: 2550px;
 $chicken-image: '../spritesmith-generated/sprite.png';
-$chicken: (0px, 60px, 0px, -60px, 285px, 140px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'chicken', );
-$boy-name: 'boy';
-$boy-x: 0px;
-$boy-y: 200px;
-$boy-offset-x: 0px;
-$boy-offset-y: -200px;
-$boy-width: 155px;
-$boy-height: 200px;
-$boy-total-width: 540px;
-$boy-total-height: 2090px;
-$boy-image: '../spritesmith-generated/sprite.png';
-$boy: (0px, 200px, 0px, -200px, 155px, 200px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'boy', );
+$chicken: (0px, 470px, 0px, -470px, 285px, 140px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'chicken', );
 $medal-name: 'medal';
 $medal-x: 0px;
-$medal-y: 400px;
+$medal-y: 610px;
 $medal-offset-x: 0px;
-$medal-offset-y: -400px;
+$medal-offset-y: -610px;
 $medal-width: 150px;
 $medal-height: 200px;
-$medal-total-width: 540px;
-$medal-total-height: 2090px;
+$medal-total-width: 564px;
+$medal-total-height: 2550px;
 $medal-image: '../spritesmith-generated/sprite.png';
-$medal: (0px, 400px, 0px, -400px, 150px, 200px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'medal', );
-$fries-name: 'fries';
-$fries-x: 0px;
-$fries-y: 600px;
-$fries-offset-x: 0px;
-$fries-offset-y: -600px;
-$fries-width: 197px;
-$fries-height: 220px;
-$fries-total-width: 540px;
-$fries-total-height: 2090px;
-$fries-image: '../spritesmith-generated/sprite.png';
-$fries: (0px, 600px, 0px, -600px, 197px, 220px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'fries', );
+$medal: (0px, 610px, 0px, -610px, 150px, 200px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'medal', );
 $milk-name: 'milk';
 $milk-x: 0px;
-$milk-y: 820px;
+$milk-y: 810px;
 $milk-offset-x: 0px;
-$milk-offset-y: -820px;
+$milk-offset-y: -810px;
 $milk-width: 193px;
 $milk-height: 220px;
-$milk-total-width: 540px;
-$milk-total-height: 2090px;
+$milk-total-width: 564px;
+$milk-total-height: 2550px;
 $milk-image: '../spritesmith-generated/sprite.png';
-$milk: (0px, 820px, 0px, -820px, 193px, 220px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'milk', );
+$milk: (0px, 810px, 0px, -810px, 193px, 220px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'milk', );
+$fries-name: 'fries';
+$fries-x: 0px;
+$fries-y: 1030px;
+$fries-offset-x: 0px;
+$fries-offset-y: -1030px;
+$fries-width: 197px;
+$fries-height: 220px;
+$fries-total-width: 564px;
+$fries-total-height: 2550px;
+$fries-image: '../spritesmith-generated/sprite.png';
+$fries: (0px, 1030px, 0px, -1030px, 197px, 220px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'fries', );
+$boy-name: 'boy';
+$boy-x: 0px;
+$boy-y: 1250px;
+$boy-offset-x: 0px;
+$boy-offset-y: -1250px;
+$boy-width: 155px;
+$boy-height: 250px;
+$boy-total-width: 564px;
+$boy-total-height: 2550px;
+$boy-image: '../spritesmith-generated/sprite.png';
+$boy: (0px, 1250px, 0px, -1250px, 155px, 250px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'boy', );
 $purse-name: 'purse';
 $purse-x: 0px;
-$purse-y: 1040px;
+$purse-y: 1500px;
 $purse-offset-x: 0px;
-$purse-offset-y: -1040px;
+$purse-offset-y: -1500px;
 $purse-width: 210px;
 $purse-height: 250px;
-$purse-total-width: 540px;
-$purse-total-height: 2090px;
+$purse-total-width: 564px;
+$purse-total-height: 2550px;
 $purse-image: '../spritesmith-generated/sprite.png';
-$purse: (0px, 1040px, 0px, -1040px, 210px, 250px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'purse', );
+$purse: (0px, 1500px, 0px, -1500px, 210px, 250px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'purse', );
 $background-name: 'background';
 $background-x: 0px;
-$background-y: 1290px;
+$background-y: 1750px;
 $background-offset-x: 0px;
-$background-offset-y: -1290px;
+$background-offset-y: -1750px;
 $background-width: 540px;
 $background-height: 800px;
-$background-total-width: 540px;
-$background-total-height: 2090px;
+$background-total-width: 564px;
+$background-total-height: 2550px;
 $background-image: '../spritesmith-generated/sprite.png';
-$background: (0px, 1290px, 0px, -1290px, 540px, 800px, 540px, 2090px, '../spritesmith-generated/sprite.png', 'background', );
-$spritesheet-width: 540px;
-$spritesheet-height: 2090px;
+$background: (0px, 1750px, 0px, -1750px, 540px, 800px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'background', );
+$spritesheet-width: 564px;
+$spritesheet-height: 2550px;
 $spritesheet-image: '../spritesmith-generated/sprite.png';
-$spritesheet-sprites: ($next, $chicken, $boy, $medal, $fries, $milk, $purse, $background, );
-$spritesheet: (540px, 2090px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($next, $come, $enter, $share-buton, $title, $chicken, $medal, $milk, $fries, $boy, $purse, $background, );
+$spritesheet: (564px, 2550px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
