--- a/src/spritesmith-generated/sprite.scss
+++ b/src/spritesmith-generated/sprite.scss
@@ -16,54 +16,54 @@ $next-offset-x: 0px;
 $next-offset-y: 0px;
 $next-width: 46px;
 $next-height: 60px;
-$next-total-width: 564px;
-$next-total-height: 2550px;
+$next-total-width: 700px;
+$next-total-height: 4717px;
 $next-image: '../spritesmith-generated/sprite.png';
-$next: (0px, 0px, 0px, 0px, 46px, 60px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'next', );
+$next: (0px, 0px, 0px, 0px, 46px, 60px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'next', );
 $come-name: 'come';
 $come-x: 0px;
 $come-y: 60px;
 $come-offset-x: 0px;
 $come-offset-y: -60px;
-$come-width: 163px;
+$come-width: 700px;
 $come-height: 80px;
-$come-total-width: 564px;
-$come-total-height: 2550px;
+$come-total-width: 700px;
+$come-total-height: 4717px;
 $come-image: '../spritesmith-generated/sprite.png';
-$come: (0px, 60px, 0px, -60px, 163px, 80px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'come', );
+$come: (0px, 60px, 0px, -60px, 700px, 80px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'come', );
 $enter-name: 'enter';
 $enter-x: 0px;
 $enter-y: 140px;
 $enter-offset-x: 0px;
 $enter-offset-y: -140px;
-$enter-width: 237px;
+$enter-width: 700px;
 $enter-height: 100px;
-$enter-total-width: 564px;
-$enter-total-height: 2550px;
+$enter-total-width: 700px;
+$enter-total-height: 4717px;
 $enter-image: '../spritesmith-generated/sprite.png';
-$enter: (0px, 140px, 0px, -140px, 237px, 100px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'enter', );
-$share-buton-name: 'shareButon';
-$share-buton-x: 0px;
-$share-buton-y: 240px;
-$share-buton-offset-x: 0px;
-$share-buton-offset-y: -240px;
-$share-buton-width: 237px;
-$share-buton-height: 100px;
-$share-buton-total-width: 564px;
-$share-buton-total-height: 2550px;
-$share-buton-image: '../spritesmith-generated/sprite.png';
-$share-buton: (0px, 240px, 0px, -240px, 237px, 100px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'shareButon', );
+$enter: (0px, 140px, 0px, -140px, 700px, 100px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'enter', );
+$sharebuton-name: 'sharebuton';
+$sharebuton-x: 0px;
+$sharebuton-y: 240px;
+$sharebuton-offset-x: 0px;
+$sharebuton-offset-y: -240px;
+$sharebuton-width: 700px;
+$sharebuton-height: 100px;
+$sharebuton-total-width: 700px;
+$sharebuton-total-height: 4717px;
+$sharebuton-image: '../spritesmith-generated/sprite.png';
+$sharebuton: (0px, 240px, 0px, -240px, 700px, 100px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'sharebuton', );
 $title-name: 'title';
 $title-x: 0px;
 $title-y: 340px;
 $title-offset-x: 0px;
 $title-offset-y: -340px;
-$title-width: 564px;
+$title-width: 700px;
 $title-height: 130px;
-$title-total-width: 564px;
-$title-total-height: 2550px;
+$title-total-width: 700px;
+$title-total-height: 4717px;
 $title-image: '../spritesmith-generated/sprite.png';
-$title: (0px, 340px, 0px, -340px, 564px, 130px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'title', );
+$title: (0px, 340px, 0px, -340px, 700px, 130px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'title', );
 $chicken-name: 'chicken';
 $chicken-x: 0px;
 $chicken-y: 470px;
@@ -71,10 +71,10 @@ $chicken-offset-x: 0px;
 $chicken-offset-y: -470px;
 $chicken-width: 285px;
 $chicken-height: 140px;
-$chicken-total-width: 564px;
-$chicken-total-height: 2550px;
+$chicken-total-width: 700px;
+$chicken-total-height: 4717px;
 $chicken-image: '../spritesmith-generated/sprite.png';
-$chicken: (0px, 470px, 0px, -470px, 285px, 140px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'chicken', );
+$chicken: (0px, 470px, 0px, -470px, 285px, 140px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'chicken', );
 $medal-name: 'medal';
 $medal-x: 0px;
 $medal-y: 610px;
@@ -82,10 +82,10 @@ $medal-offset-x: 0px;
 $medal-offset-y: -610px;
 $medal-width: 150px;
 $medal-height: 200px;
-$medal-total-width: 564px;
-$medal-total-height: 2550px;
+$medal-total-width: 700px;
+$medal-total-height: 4717px;
 $medal-image: '../spritesmith-generated/sprite.png';
-$medal: (0px, 610px, 0px, -610px, 150px, 200px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'medal', );
+$medal: (0px, 610px, 0px, -610px, 150px, 200px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'medal', );
 $milk-name: 'milk';
 $milk-x: 0px;
 $milk-y: 810px;
@@ -93,10 +93,10 @@ $milk-offset-x: 0px;
 $milk-offset-y: -810px;
 $milk-width: 193px;
 $milk-height: 220px;
-$milk-total-width: 564px;
-$milk-total-height: 2550px;
+$milk-total-width: 700px;
+$milk-total-height: 4717px;
 $milk-image: '../spritesmith-generated/sprite.png';
-$milk: (0px, 810px, 0px, -810px, 193px, 220px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'milk', );
+$milk: (0px, 810px, 0px, -810px, 193px, 220px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'milk', );
 $fries-name: 'fries';
 $fries-x: 0px;
 $fries-y: 1030px;
@@ -104,21 +104,21 @@ $fries-offset-x: 0px;
 $fries-offset-y: -1030px;
 $fries-width: 197px;
 $fries-height: 220px;
-$fries-total-width: 564px;
-$fries-total-height: 2550px;
+$fries-total-width: 700px;
+$fries-total-height: 4717px;
 $fries-image: '../spritesmith-generated/sprite.png';
-$fries: (0px, 1030px, 0px, -1030px, 197px, 220px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'fries', );
+$fries: (0px, 1030px, 0px, -1030px, 197px, 220px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'fries', );
 $boy-name: 'boy';
 $boy-x: 0px;
 $boy-y: 1250px;
 $boy-offset-x: 0px;
 $boy-offset-y: -1250px;
-$boy-width: 155px;
+$boy-width: 700px;
 $boy-height: 250px;
-$boy-total-width: 564px;
-$boy-total-height: 2550px;
+$boy-total-width: 700px;
+$boy-total-height: 4717px;
 $boy-image: '../spritesmith-generated/sprite.png';
-$boy: (0px, 1250px, 0px, -1250px, 155px, 250px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'boy', );
+$boy: (0px, 1250px, 0px, -1250px, 700px, 250px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'boy', );
 $purse-name: 'purse';
 $purse-x: 0px;
 $purse-y: 1500px;
@@ -126,26 +126,48 @@ $purse-offset-x: 0px;
 $purse-offset-y: -1500px;
 $purse-width: 210px;
 $purse-height: 250px;
-$purse-total-width: 564px;
-$purse-total-height: 2550px;
+$purse-total-width: 700px;
+$purse-total-height: 4717px;
 $purse-image: '../spritesmith-generated/sprite.png';
-$purse: (0px, 1500px, 0px, -1500px, 210px, 250px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'purse', );
+$purse: (0px, 1500px, 0px, -1500px, 210px, 250px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'purse', );
+$road-name: 'road';
+$road-x: 0px;
+$road-y: 1750px;
+$road-offset-x: 0px;
+$road-offset-y: -1750px;
+$road-width: 700px;
+$road-height: 250px;
+$road-total-width: 700px;
+$road-total-height: 4717px;
+$road-image: '../spritesmith-generated/sprite.png';
+$road: (0px, 1750px, 0px, -1750px, 700px, 250px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'road', );
 $background-name: 'background';
 $background-x: 0px;
-$background-y: 1750px;
+$background-y: 2000px;
 $background-offset-x: 0px;
-$background-offset-y: -1750px;
-$background-width: 540px;
-$background-height: 800px;
-$background-total-width: 564px;
-$background-total-height: 2550px;
+$background-offset-y: -2000px;
+$background-width: 700px;
+$background-height: 1300px;
+$background-total-width: 700px;
+$background-total-height: 4717px;
 $background-image: '../spritesmith-generated/sprite.png';
-$background: (0px, 1750px, 0px, -1750px, 540px, 800px, 564px, 2550px, '../spritesmith-generated/sprite.png', 'background', );
-$spritesheet-width: 564px;
-$spritesheet-height: 2550px;
+$background: (0px, 2000px, 0px, -2000px, 700px, 1300px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'background', );
+$firstbg-name: 'firstbg';
+$firstbg-x: 0px;
+$firstbg-y: 3300px;
+$firstbg-offset-x: 0px;
+$firstbg-offset-y: -3300px;
+$firstbg-width: 700px;
+$firstbg-height: 1417px;
+$firstbg-total-width: 700px;
+$firstbg-total-height: 4717px;
+$firstbg-image: '../spritesmith-generated/sprite.png';
+$firstbg: (0px, 3300px, 0px, -3300px, 700px, 1417px, 700px, 4717px, '../spritesmith-generated/sprite.png', 'firstbg', );
+$spritesheet-width: 700px;
+$spritesheet-height: 4717px;
 $spritesheet-image: '../spritesmith-generated/sprite.png';
-$spritesheet-sprites: ($next, $come, $enter, $share-buton, $title, $chicken, $medal, $milk, $fries, $boy, $purse, $background, );
-$spritesheet: (564px, 2550px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($next, $come, $enter, $sharebuton, $title, $chicken, $medal, $milk, $fries, $boy, $purse, $road, $background, $firstbg, );
+$spritesheet: (700px, 4717px, '../spritesmith-generated/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
