--- a/template/index.html
+++ b/template/index.html
@@ -10,9 +10,9 @@
 
     <div id="index"></div>
     <!-- <script src="http://localhost:3000/dist/index.js"></script> -->
-    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-        <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
-        <% } %>
+    
+        <script src="/dist/index.a22d5041313207aff235.js"></script>
+        
 
 </body>
 
