--- a/template/index.html
+++ b/template/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>consume</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <div id="index"></div>
     <!-- <script src="http://localhost:3000/dist/index.js"></script> -->
     
-        <script src="/dist/index.599fe769e9c34961e6c7.js"></script>
+        <script src="/dist/index.82f3aeb660fc2411fcb4.js"></script>
         
 
 </body>
