--- a/template/index.ejs
+++ b/template/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>consume</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 </head>
 
 <body>
