--- a/template/index.ejs
+++ b/template/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>consume</title>
+    <title>学生卡消费账单</title>
     <link rel="stylesheet" type="text/css" href="/static/css/index.css">
     <script>
         var _hmt = _hmt || [];
