--- a/template/index.ejs
+++ b/template/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>学生卡消费账单</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/index.css"> -->
     <script>
         var _hmt = _hmt || [];
         (function() {
