--- a/template/index.html
+++ b/template/index.html
@@ -3,8 +3,18 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>consume</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <title>学生卡消费账单</title>
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/index.css"> -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?08b883e3446528a75cad424b8472ea5a";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
 
 <body>
@@ -12,7 +22,7 @@
     <div id="index"></div>
     <!-- <script src="http://localhost:3000/dist/index.js"></script> -->
     
-        <script src="/dist/index.82f3aeb660fc2411fcb4.js"></script>
+        <script src="/dist/index.a538cda8000a43eaa1b4.js"></script>
         
 
 </body>
