fix: add login tip and modified js path

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -20,10 +20,10 @@
 <body>
 
     <div id="index"></div>
-    <!-- <script src="http://localhost:3000/dist/index.js"></script> -->
-    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+    <script src="https://occc3ev3l.qnssl.com/consume.js"></script>
+    <!-- <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
         <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
-        <% } %>
+        <% } %> -->
 
 </body>
 
