--- a/template/index.html
+++ b/template/index.html
@@ -20,10 +20,9 @@
 <body>
 
     <div id="index"></div>
-    <!-- <script src="http://localhost:3000/dist/index.js"></script> -->
-    
-        <script src="/dist/index.a538cda8000a43eaa1b4.js"></script>
-        
+    <script src="https://occc3ev3l.qnssl.com/consume.js"></script>    <!-- 
+        <script src="/dist/index.bb164d21b7d3c3bea526.js"></script>
+         -->
 
 </body>
 
