--- a/template/index.html
+++ b/template/index.html
@@ -20,8 +20,8 @@
 <body>
 
     <div id="index"></div>
-    <script src="https://occc3ev3l.qnssl.com/consume.js"></script>    <!-- 
-        <script src="/dist/index.bb164d21b7d3c3bea526.js"></script>
+    <script src="https://occc3ev3l.qnssl.com/consumeNew.js"></script>    
+    <!-- <script src="/dist/index.bb164d21b7d3c3bea526.js"></script>
          -->
 
 </body>
