fix: window's location of android's browser

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -20,7 +20,7 @@
 <body>
 
     <div id="index"></div>
-    <script src="https://occc3ev3l.qnssl.com/consumeNew.js"></script>
+    <script src="https://occc3ev3l.qnssl.com/consumeNewest.js"></script>
     <!-- <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
         <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
         <% } %> -->
