fix: modified students' total

--- a/template/index.html
+++ b/template/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div id="index"></div>
-    <script src="https://occc3ev3l.qnssl.com/consumeNewest.js"></script>    
+    <script src="https://occc3ev3l.qnssl.com/consumeLatest.js"></script>    
     <!-- <script src="/dist/index.bb164d21b7d3c3bea526.js"></script>
          -->
 
